rename flask_reddit --> base

--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -1,5 +1,5 @@
 /*  
- *  Here will be all of flask_reddit's custom CSS. Let's keep this
+ *  Here will be all of base's custom CSS. Let's keep this
  *  fairly organized!
  */
 
