--- a/base/templates/home.html
+++ b/base/templates/home.html
@@ -120,7 +120,7 @@
     <i>
     <div class="align-right-col byline-lucas">Built by: <a href="https://codelucas.com">Lucas Ou-Yang</a>.
         <br>
-        <a href="https://github.com/codelucas/flask_reddit">
+        <a href="https://github.com/codelucas/base">
             View code on Github</a>.</div>
     </i>
   {% endblock %}
