--- a/base/templates/home.html
+++ b/base/templates/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="col-lg-9 col-md-9 col-sm-7 col-xs-5 left-bar">
   {% block left %}
+  {% from "macros.html" import render_pub %}
       {% if num_searches is defined %}
         <h4 class="highlight">We have found {{ num_searches }} search results </h4>
         <br>
@@ -24,32 +25,10 @@
                   {{ thread.votes }}
               </div>
           </div>
-          <div class="col-lg-1 listing-thumbnail-box">
-              <img class="listing-image" src="{{ thread.thumbnail|replace("http://", "https://") }}"/>
-          </div>
-          <div class="col-lg-8 listing-text">  
-              {% if thread.link %}
-              <a href="{{ thread.link }}" class="listing-title">
-              {% else %}
-              <a href="{{ config.ROOT_URL }}/threads/{{ thread.subreddit.name }}/{{ thread.id }}/{{ thread.title|truncate(100)|replace(' ', '_') }}" class="listing-title">
-              {% endif %}
-                <h4 class="listing-title-text">{{ thread.title }}</h4>
-              </a>
 
-              <div class="post-listing-meta">
-                  <a href="{{ url_for('threads.thread_permalink', subreddit_name = thread.subreddit.name, thread_id = thread.id, title = thread.title|truncate(100)|replace(' ', '_')) }}">
-                  {{ thread.comments.all()|length() }} comments</a>,
-                  {{ thread.pretty_date() }}, by 
-                  <a href="{{ url_for('users.home_page', 
-                        username=thread.user.username) }}">
-                        {{ thread.user.username }}</a> 
-                    in
-                    <a href="{{ url_for('subreddits.permalink', 
-                        subreddit_name=thread.subreddit.name) }}">
-                        {{ thread.subreddit.name }}
-                    </a>
-              </div>
-          </div>
+              
+            {{ render_pub(thread) }}
+
         </div>
       {% endfor %}
 
