--- a/base/templates/threads/pub.html
+++ b/base/templates/threads/pub.html
@@ -1,30 +1,14 @@
-{% macro render_field(field) %}
-  <div class="form_field">
-  <!--{ field.label(class="label") }}-->
-  {% if field.errors %}
-    {% set css_class = 'has_error ' + kwargs.pop('class', '') %}
-    {{ field(class=css_class, **kwargs) }}
-    <div class="alert alert-dismissable alert-danger">{% for error in field.errors %}<li>{{ error|safe|e }}</li>{% endfor %}</ul>
-  {% else %}
-    {{ field(**kwargs) }}
-  {% endif %}
-  </div>
-{% endmacro %}
-
-
 {% macro render_pub(thread) %}
-<div class="col-lg-2 listing-thumbnail-box">
+<div class="col-lg-1 listing-thumbnail-box">
+    <a href="{{ url_for('threads.thread_permalink',
+                      subreddit_name = thread.subreddit.name,
+                      title=thread.pub_title[:100].replace(" ", "_"),
+                      thread_id = thread.id) 
+         }}" class="listing-title">
     {% if thread.thumbnail %}
-    <div class='pub-img'>
-        <a href="{{ url_for('threads.thread_permalink',
-                          subreddit_name = thread.subreddit.name,
-                          title=thread.pub_title[:100].replace(" ", "_"),
-                          thread_id = thread.id) 
-             }}" class="thumbnail pub_thumb">
-          <img src="{{ url_for('static', filename='thumbnail/' + thread.thumbnail) }}"/>
-        </a>
-    </div>
+      <img class="listing-image" src="{{ url_for('static', filename='thumbnail/' + thread.thumbnail) }}"/>
     {% endif %}
+    </a>
 </div>
 <div class="col-lg-8 listing-text">
     <a href="{{ url_for('threads.thread_permalink',
