--- a/base/templates/threads/permalink.html
+++ b/base/templates/threads/permalink.html
@@ -2,27 +2,7 @@
 
 {% block left %}
 {% from "macros.html" import render_pub %}
-<div name="{{ thread.id }}" class="row listing-row thread-permalink">
-    <div class="col-lg-1 listing-vote-box">
-        <div class="">
-            {% if user is defined and user != None and thread.has_voted(user.id) %}
-                <a data-voted="true" style="color:#0080ff;" href="javascript:void(0)" 
-                    class="listing-vote-button">▲</a>
-            {% else %}
-                <a data-voted="false" style="color:#000;" href="javascript:void(0)"
-                    class="listing-vote-button">▲</a>
-            {% endif %}
-        </div>
-        <div class="listing-votes-number">
-            {{ thread.votes }}
-        </div>
-    </div>
-
-       
-        {{ render_pub(thread) }}
-
-
-</div>
+    {{ render_pub(thread, user) }}
 
 <div>
     <div class="col-lg-6 thread-comment-section">
