--- a/base/templates/users/profile.html
+++ b/base/templates/users/profile.html
@@ -1,51 +1,37 @@
 {% extends "home.html" %}
 
 {% block left %}
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-9 user-profile-box">
-            <div class="row">
-                <div class="col-sm-6 col-md-8">
-                    <h4>User: <u>{{ current_user.username }}</u></h4>
-                    <p class="trophy-room">
-                    <strong>Threads:</strong> {{ current_user.threads.all()|length() }}</span>, 
-                    <strong>Comments:</strong> {{ current_user.comments.all()|length() }}</span><br> 
-                    </p>
-                    {{ current_user.email }}
-                    <br>
 
-                    <u><h4 class="profile-label">Recent threads</h4></u>
-                    {% for thread in current_user.threads.all()[-7:]|reverse  %}
-                        <p>
-                        <a class="profile-listing" href="{{ thread.link }}">{{ thread.title }}</a>
-                            <br>
-                            <span class="profile-listing-inline"> posted 
-                            <a href="{{ config.ROOT_URL }}/threads/{{ thread.subreddit.name }}/{{ thread.id }}/{{ thread.title|truncate(100)|replace(' ', '_') }}">
-                                {{ thread.pretty_date() }}</a> in 
-                            <a href="/r/{{ thread.subreddit.name }}">{{ thread.subreddit.name }}</a>
-                            </span>
-                        </p>
-                    {% endfor %}
+<h2>{{ current_user.username }} <small>{{ current_user.university }}</h2>
+<hr />
+<strong>Threads:</strong> {{ current_user.threads.all()|length() }}</span><br />
+<strong>Thread Karma:</strong> {{ current_user.get_thread_karma() }}<br />
+<strong>Comments:</strong> {{ current_user.comments.all()|length() }}</span><br />
+<strong>Comment Karma:</strong> {{ current_user.get_comment_karma() }}
 
-                    <u><h4 class="profile-label">Recent comments</h4></u>
-                    {% for comment in current_user.comments.all()[-7:]|reverse %}
-                        <p>
-                        <span class="profile-listing">{{ comment.text }}</span> 
-                        <span class="profile-listing-inline">
-                        <a href="{{ config.ROOT_URL }}/threads/{{ comment.thread.subreddit.name }}/{{ comment.thread.id }}/{{ comment.thread.title|truncate(100)|replace(' ', '_') }}">{{ comment.pretty_date() }}</a>
-                        </p>
-                        </span>
-                    {% endfor %}
-                    <br>
-                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
 
-{% block user_dashboard %}
-    <h3 class="dash-text highlight">Thread Karma: {{ current_user.get_thread_karma() }}</h3>
-    <h3 class="dash-text highlight">Comment Karma: {{ current_user.get_comment_karma() }}</h3>
-    <br>
+<h4 class="profile-label">Recent threads</h4>
+{% for thread in current_user.threads.all()[-7:]|reverse  %}
+    <p>
+    <a class="profile-listing" href="{{ url_for('threads.thread_permalink', subreddit_name=thread.subreddit.name, thread_id=thread.id, title=slugify(thread.pub_title)) }}">{{ thread.pub_title }}</a>
+        <br>
+        <span class="profile-listing-inline"> posted 
+        <a href="{{ config.ROOT_URL }}/threads/{{ thread.subreddit.name }}/{{ thread.id }}/{{ slugify(thread.pub_title) }}">
+            {{ thread.pretty_date() }}</a> in 
+        <a href="/r/{{ thread.subreddit.name }}">{{ thread.subreddit.name }}</a>
+        </span>
+    </p>
+{% endfor %}
+
+<h4 class="profile-label">Recent comments</h4>
+{% for comment in current_user.comments.all()[-7:]|reverse %}
+    <p>
+    <span class="profile-listing">{{ comment.text }}</span> 
+    <span class="profile-listing-inline">
+    <a href="{{ config.ROOT_URL }}/threads/{{ comment.thread.subreddit.name }}/{{ comment.thread.id }}/{{ slugify(comment.thread.title) }}">{{ comment.pretty_date() }}</a>
+    </p>
+    </span>
+{% endfor %}
+<br>
+
 {% endblock %}
